fix caption overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,7 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: calc(1rem + .5vw);
+  font-family: 'Source Sans Pro', sans-serif;
   max-width: 207px;
   line-height: 1.4rem;
 }
